[gd_scene load_steps=2 format=3 uid="uid://dsft50bopx7l2"]

[ext_resource type="Script" path="res://main.gd" id="1_icijk"]

[node name="Main" type="Node"]
script = ExtResource("1_icijk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.203322, 0.203322, 0.203322, 1)
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="MainVBox" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MessagesVBox" type="VBoxContainer" parent="Control/MarginContainer/MainVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="InputHBox" type="HBoxContainer" parent="Control/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 8

[node name="LineEdit" type="LineEdit" parent="Control/MarginContainer/MainVBox/InputHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubmitButton" type="Button" parent="Control/MarginContainer/MainVBox/InputHBox"]
layout_mode = 2
text = "Submit"

[connection signal="text_submitted" from="Control/MarginContainer/MainVBox/InputHBox/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Control/MarginContainer/MainVBox/InputHBox/SubmitButton" to="." method="_on_submit_button_pressed"]
